# init

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  README.md  _install.sh  hysteria2.sh  install.sh  justfile  new-install.sh
bootstrap/: verify.sh
docs/: 2026-04-10-bugfix-shell-sudo-i-target-user.md  local-config.md  progress.md  refactor-tasks.md
lib/: init-common.sh
scripts/: installFzf.sh  nvim.sh  setGit.sh  tmux.sh  tmux2.sh  vim.sh  vimrc  zed.sh  zsh.sh
settings/: installFzf.sh  nvim.sh  setGit.sh  tmux.sh  zsh.sh  zshrc
shellConfigs/: alias  env  function  index  local  local.example  shelllib
softlinks/: sshconfig  sshconfig.local.example  sshconfig.shared  zeta.zsh-theme  zshrc
templates/projects/solana-program/: Cargo.toml
templates/projects/solana-program/src/: lib.rs  processor.rs
tests/: cli-smoke.bats  test_xray_traffic_show_summary.py
tools/: acme-manager  acme_batch_issue.sh  aptSources.sh  backup2s3.sh  backupDockerVolume.sh  cargoSource.sh  clearSystemdLogCron.sh  debianSmb.sh  debianSources.sh  dockerSource.sh  dockerVolume  enableSudo.sh  extendLvm.py  extendLvm.sh  fail2ban-manager.sh  (+38 more)
tools.old/: ali6.sh  archSource  cargoSource.sh  dockerSource.sh  hysteria2.sh  installBrew.sh  installGolang.sh  installLunarvim.sh  installNodejs.sh  installPortainer.sh  installRust.sh  installTraffic.sh  installXrayReality.sh  installawscli.sh  installlazygit.sh  installmihomo.sh  logrotate.sh  sensors.sh  solc-install.sh  stunnel.sh  text-mode.txt  ubuntu-static-ip.sh  ubuntuStaticIp.sh  updatePveCertificate.sh  userGateway.sh
(+240 files in other folders)
