[package]
name = "solana_program_tmpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.17.13"
thiserror = "1.0.53"
# 最新版本有bug，编译不过，先固定版本，等待后续修复后，删除此行,会自动拉新
ahash = "=0.8.6"
borsh = { version = "1.3.0", features = ["derive"] }

[lib]
name = "solana_program_tmpl"
crate-type = ["cdylib", "lib"]
